--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,9 +17,8 @@
 </head>
 
 <body>
-  Nav bar might go here
+  <p>Nav bar might go here</p>
+
+  <p>This content comes from the partial <code>/views/partials/header.ejs</code></p>
 
   <h1><%= title %></h1>
-</body>
-
-</html>
