--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+/* starting note: mvp.css may also be loaded by your header partial */
+
 * {
     box-sizing: border-box;
 }
@@ -5,10 +7,10 @@
 body {
     margin: 0 auto;
     max-width: 1200px;
-    /* height: 100vh; */
 }
 
-.product {
-    display: grid;
-    grid-template-columns: 3fr 0.4fr 0.4fr 0.4fr 1fr 2fr;
+footer {
+    margin-top: 2rem;
+    border-top: 4px solid #888;
+    text-align: center;
 }
