--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,9 +1,12 @@
 <%- include("../partials/header.ejs", {title: "Main Page"}) %>
 
-<p>This is the main page, index.ejs</p>
 
-<a href="/db-test">this request will test that the db connection is ok</a>
+<p>This content comes from <code>/views/pages/index.ejs</code></p>
 
-</body>
+<section>
+  <p><a href="/db-test">Clicking this link will test to see if your db connection is ok</a></p>
 
-</html>
+  <p>Delete all this text and make these pages your own!</p>
+</section>
+
+<%- include("../partials/footer.ejs") %>
